--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,11 @@ services:
       - db
     tty: true
     stdin_open: true
+    env_file: ./back/.env
     environment:
       - RAILS_ENV=development
       - BUNDLE_DEPLOYMENT=
       - BUNDLE_FROZEN=
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
   front:
     build:
       context: ./front/
